# energy-dashboard-api

./: Dockerfile  pyproject.toml
api/: config.py  main.py  run-dev.sh
api/routers/: carbon_intensity.py  octopus.py
api/schemas/: carbon_intensity.py  octopus.py
api/services/: api_clients.py
api/tests/: test_api_clients.py  test_endpoints.py
k8s/: autoscaler.yaml  database-backup.yaml  database.yaml  deployment-temp.yaml  deployment.yaml  ingress-new.yaml  ingress.yaml  service-temp.yaml
